2007-11-07  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/component.py (ComponentAvatar.getWorker):
	Remove, there was already getWorkerName.
	(ComponentHeaven.feedServerAvailable): Fix crack.
	(FeedMap): Factor getEatersForFeeders and getFeedersForEaters into
	a separate object -- will allow some memoization opportunities.
	(ComponentHeaven.__init__):
	(ComponentHeaven._connectEatersAndFeeders): Make and use the
	feedMap.
	(ComponentAvatar.onShutdown): Notify the heaven on logout so that
	it can e.g. reconnect other components that eat from virtual
	feeds.
	(ComponentHeaven.componentAttached): Take the avatar directly.
	Change some warnings into asserts.
	(ComponentHeaven.componentDetached): New function. Notify the feed
	map, and reconnect any components that need to be reconnected.

2007-11-07  Michael Smith <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/resources.py:
	  Import fcntl in global scope as well. There's no reason to do this
	  locally, and it's somewhat of a hot path (client connection).

2007-11-07  Johan Dahlin  <johan@gnome.org>

	* flumotion/common/common.py:
	* flumotion/common/config.py:
	Avoid importing locale in a non-global scope, should help us
	avoid some locking. Also only modify LC_NUMERIC on 2.3 since 
	PEP 331 went into 2.4.

2007-11-07  Michael Smith <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	  Throttle uiState updates in the streamer.

2007-11-07  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/component.py (ComponentAvatar.getWorker)
	(ComponentAvatar.getClockMaster): New accessors.
	(ComponentAvatar.perspective_removeKeycardId)
	(ComponentAvatar.perspective_expireKeycard): Simplify.
	(ComponentHeaven.feedServerAvailable)
	(ComponentHeaven._setupClocking): Use accessors.
	(ComponentHeaven.masterClockAvailable): Remove check for detached
	component.
	(ComponentHeaven.feedServerAvailable): Fix broken refactor.

	* flumotion/test/Makefile.am: